$Id$

v0.39.7		14-Jan-2004


v0.39.6		11-Jan-2004 - 14-Jan-2004

        upgrade:
                Check setting 7.x.3.18 for each node. If you know the node uses
                Irex between 2.24 and 2.29 then set this to Yes or you won't 
		have good sessions without files with this mailer. Sessions
		with Irex that do transfer some file are Ok.

	mbcico:
		New binkp/1.1 driver. Check the upgrade for your Irex links.
		In case of troubles please report these. 
		In the mbcico directory are 2 files, binkpold.c and binkpold.h
		if they are renamed to binkp.c and binkp.h you get the old 1.0
		driver back. After some weeks I hope to remove these 2 old 
		files.
		Added support for T-Mail fileboxes, partly written and info
		provided by Przemyslaw Kwiatkowski (2:480/127).

	mbout:
		Added support for T-Mail fileboxes.

	mbtask:
		Added support for T-Mail fileboxes.

	mbsetup:
		Reorganised menu 1.4 screen 1 and 2.
		Added settings for T-Mail filebox paths in the second screen
		of menu 1.4.


v0.39.5		24-Dec-2003 - 11-Jan-2004

	general:
		Upgraded to new released ftscprod.008
		Added setup option per node to disable the binkp/1.1 protocol.
		Added new binkp/1.1 driver, the code is disabled by default
		and can only be used with the right configure option.

	common.a:
		Allows node locking with zero bytes lockfiles created by some
		other OS when enabled in the setup.
		The attach function now checks if a file is already attached.

	mbcico:
		Binkp code cleanup.
		Allow m_file command in binkp during file transfer in progress.
		Fixed a segfault when a session failed.
		New binkp/1.1 driver, not compiled by default.

	mbout:
		Poll, remove poll and request failed to points which had no
		point directory in the outbound, now the directory is created.

	mbfido:
		With scannews after a GROUP command when authorisation was
		asked we did not perform a login.

	mbsetup:
		Added setting in menu 1.14 to allow zero bytes lockfiles
		created by another OS.